[tool.poetry]
name = "tracker"
version = "0.1.0"
description = ""
authors = ["Kloym <oleg.petr1223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.47.0"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
